input[type=date] with invalid date should return empty string for value IDL attribute instead of the default value

input[type=date] with invalid date should return empty string for value IDL attribute instead of the default value
https://bugs.webkit.org/show_bug.cgi?id=120038

Reviewed by NOBODY (OOPS!).

Merge https://chromium.googlesource.com/chromium/blink/+/cb52052e3522824fa9ffc73cb34667492d47d976

* Source/WebCore/html/BaseDateAndTimeInputType.cpp
(WebCore::BaseDateAndTimeInputType::visibleValue): Modified BaseDateAndTimeInputType::sanitizeValue so it should return an empty string if the input string is invalid.